@@ -1,3 +1,8 @@
+2009-11-14  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/manager/config.py:
+	  Add to docstring.
+
 2009-11-10  Xavier Queralt  <xqueralt@flumotion.com>
 
 	* flumotion/worker/checks/audio.py:
